@@ -34,6 +34,7 @@ https://github.com/elastic/beats/compare/v1.3.1...1.3[Check the HEAD diff]
 *Filebeat*
 
 *Winlogbeat*
+- Fix corrupt registry file that occurs on power loss by disabling file write caching. {issue}2313[2313]
 
 ==== Added
 
